force-app/main/default/objects/Province__c/fields/Region_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Group_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region/Group Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>