force-app/main/default/objects/Province__c/fields/Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone/Team</label>
    <length>10</length>
    <type>Text</type>
</CustomField>